@@ -2202,17 +2202,46 @@ static void poison_living(object *op, object *hitter, int dam) {
 static void slow_living(object *op, object *hitter, int dam) {
     archetype *at = find_archetype("slowness");
     object *tmp;
+    // Used to calculate the speed penalty of the slow attempt
+    int speed_penalty;
 
     if (at == NULL) {
         LOG(llevError, "Can't find slowness archetype.\n");
+        return; // Bail so we don't segfault
     }
+    
+    /**
+     * Give slow attacks some oomph -- always speed -1 was REALLY weak
+     *
+     * Daniel Hawkins 2018-05-31
+     */
+    // Higher level slow effects make you slower.
+    speed_penalty = hitter->level - op->level + random_roll(1, 5, hitter, PREFER_LOW);
+    // Resistance to slow will also affect how much you are slowed by.
+    speed_penalty = speed_penalty * (100-op->resist[ATNR_SLOW]) / 100;
+    // Make sure we actually have a penalty amount. We can assume that op is not immune in this method.
+    if (speed_penalty < 1)
+        speed_penalty = 1;
+    else if (speed_penalty > 30) // Data barrier for stats.exp is 127, but that is huge slowness. Pick something less than that.
+        speed_penalty = 30;
+    
     tmp = arch_present_in_ob(at, op);
     if (tmp == NULL) {
         tmp = arch_to_object(at);
+        tmp->stats.exp = -speed_penalty;
         tmp = object_insert_in_ob(tmp, op);
         draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_ATTRIBUTE, MSG_TYPE_ATTRIBUTE_BAD_EFFECT_START,
                       "The world suddenly moves very fast!");
-    } else
+    }
+    // If we are hitting for more intense slowness, override the old one.
+    else if (tmp->stats.exp > -speed_penalty)
+    {
+        tmp->stats.exp = -speed_penalty;
+        tmp->stats.food -= 5; // But also reduce the duration to compensate.
+        draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_ATTRIBUTE, MSG_TYPE_ATTRIBUTE_BAD_EFFECT_START,
+                      "The world moves even faster!");
+    }
+    else
         tmp->stats.food++;
     SET_FLAG(tmp, FLAG_APPLIED);
     tmp->speed_left = 0;
